feat: add HTML5 export pipeline
